--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Пазарувай със СосБук",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-new.png",
       "sizes": "512x512",
       "type": "image/png"
     }
